Update `Instalation`